--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "animate.css": "^4.1.1",
         "aos": "^2.3.4",
         "axios": "^1.6.8",
+        "bootstrap": "^5.3.3",
         "next": "^14.1.4",
         "nodemailer": "^6.9.13",
         "nodemailer-sendgrid-transport": "^0.2.0",
         "react": "^18.2.0",
         "react-accessible-accordion": "^5.0.0",
+        "react-awesome-reveal": "^4.2.14",
+        "react-bootstrap": "^2.10.4",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
         "react-hot-toast": "^2.4.0",
